--- a/styles/about.css
+++ b/styles/about.css
@@ -4,13 +4,21 @@
     display: grid;
     gap: 7px;
     margin: 1%;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(3,1fr);
 }
 .smallitems{
     display: grid;
     gap: 7px;
     margin: 1%;
     grid-template-columns: repeat(8,1fr);
+}
+@media only screen and (min-width: 425px) and (max-width: 1024px){
+    .items{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .smallitems{
+        grid-template-columns: repeat(4,1fr);
+    }
 }
 @media only screen and (max-width: 425px){
     .items{
@@ -20,15 +28,20 @@
         grid-template-columns: repeat(2,1fr);
     }
 }
-@media only screen and (min-width: 425px) and (max-width: 1024px){
-    .items{
-        grid-template-columns: repeat(2,1fr);
-    }
-    .smallitems{
-        grid-template-columns: repeat(4,1fr);
-    }
+.items .item{
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0.5em;
+    word-spacing: normal;
+    border: 2px solid #2d726b;
+    text-decoration: none;
+    color: initial;
+    transition: 0.5s;
+    height: fit-content;
 }
-.item{
+.smallitems .item{
     display: inline-flex;
     flex-direction: column;
     justify-content: center;
@@ -45,8 +58,7 @@
     background-color: #46ada3;
 }
 .items .item img{
-    width: 100%;
-    margin-bottom: 3%;
+    height: 144px;
     object-fit: cover;
 }
 .smallitems .item img{
@@ -54,13 +66,17 @@
     margin-bottom: 3%;
     object-fit: cover;
 }
-.title{
+.items .item .title{
+    font-size: 20px;
+    text-align: left;
+}
+.items .item .description{
+    text-align: left;
+    font-size: 18px;
+}
+.smallitems .item .title{
     font-size: 20px;
     text-align: center;
-}
-.description{
-    text-align: center;
-    font-size: 18px;
 }
 #projectitems{
     grid-template-columns: repeat(1,1fr);
