--- a/styles/about.css
+++ b/styles/about.css
@@ -24,7 +24,6 @@
     display: none;
 }
 
-/*index page*/
 .items{
     display: grid;
     gap: 7px;
@@ -111,6 +110,12 @@
     font-size: 20px;
     text-align: center;
 }
+details{
+    margin-bottom: 0.5%;
+}
+summary{
+    font-size: 20px;
+}
 @media only screen and (max-width: 1280px){
     .title{
         font-size: 18px;
@@ -118,216 +123,4 @@
     .description{
         font-size: 15px;
     }
-}
-
-/*contact page*/
-form{
-    width: 100%;
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    color: #000000;
-}
-form li{
-    display: block;
-    align-items: stretch;
-    margin-bottom: 15px;
-}
-.label{
-    width: auto;
-    height: auto;
-    font-size: 25px;
-}
-.text{
-    width: 100%;
-    height: 40px;
-    border: 0;
-    border-bottom: solid 3px #46ada3;
-    background-color: inherit;
-    outline: none;
-    font-size: 20px;
-}
-.text::-webkit-input-placeholder{
-    font-family: sans-serif;
-    font-size: 20px;
-}
-.option{
-    opacity: 0;
-    width: auto;
-}
-.optionw{
-    display: inline-block;
-    border: solid 1px #46ada3;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 0.3s;
-    padding: 0.5% 1%;
-    font-size: 20px;
-}
-.option:hover+.optionw{
-    background-color: #46ada3;
-}
-.option:checked+.optionw{
-    background-color: #46ada3;
-    cursor: default;
-}
-textarea{
-    resize: none;
-    width: 100%;
-    min-height: 100px;
-    border: 0;
-    border-bottom: solid 3px #46ada3;
-    background-color: inherit;
-    outline: none;
-    font-size: 20px;
-}
-textarea::-webkit-input-placeholder{
-    font-family: sans-serif;
-    font-size: 20px;
-}
-#buttonblock{
-    display: flex;
-    justify-content: center;
-}
-form button{
-    color: #000000;
-    margin: 10px;
-    border: solid 3px #46ada3;
-    border-radius: 20px;
-    background-color: inherit;
-    width: 200px;
-    height: 50px;
-    font-size: 20px;
-    transition: 0.3s;
-}
-form button:hover{
-    background-color: #46ada3;
-    cursor: pointer;
-}
-form button:active{
-    transform: scale(0.9);
-}
-@media only screen and (max-width: 768px){
-    .label{
-        font-size: 20px;
-    }
-    .text{
-        font-size: 16px;
-    }
-    .text::-webkit-input-placeholder{
-        font-size: 16px;
-    }
-    .option{
-        display: block;
-    }
-    .optionw{
-        font-size: 16px;
-    }
-    textarea{
-        font-size: 16px;
-    }
-    textarea::-webkit-input-placeholder{
-        font-size: 16px;
-    }
-    button{
-        font-size: 16px;
-        height: 40px;
-    }
-}
-
-/*project page*/
-#choose{
-    overflow: hidden;
-    height: fit-content;
-    margin: 0 5vw;
-    padding: 0 2%;
-}
-#choosetype{
-    width: 100%;
-    height: fit-content;
-    font-size: 20px;
-    background-color: inherit;
-    border: #2d726b solid 3px;
-    border-radius: 10px;
-    padding: 0.5% 1%;
-    box-sizing: border-box;
-}
-#projectc{
-    overflow: hidden;
-    min-height: 120px;
-    height: fit-content;
-    margin: 1% 5vw 2% 5vw;
-    padding: 2% 2% 5% 2%;
-    display: grid;
-    grid-template-columns:repeat(3,1fr);
-    gap: 15px;
-    background-color: inherit;
-    border-radius: 0px;
-    color: inherit;
-    box-shadow: 0 0 0 0;
-}
-@media only screen and (max-width: 800px){
-    #projectc{
-        grid-template-columns: repeat(1,1fr);
-    }
-}
-@media only screen and (min-width: 800px) and (max-width: 1280px){
-    #projectc{
-        grid-template-columns: repeat(2,1fr);
-    }
-}
-.problock{
-    background-color: rgba(255, 255, 255, 0.75);
-    margin: 1.3% 2%;
-    padding: 4%;
-    display: inline-flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 15px;
-    cursor:pointer;
-    overflow: hidden;
-    transform:scale(1,1);
-    transition: all 0.5s ease-out;
-    color: #000000;
-    box-shadow: 0 10px 10px -5px;
-    text-decoration: none;
-}
-.problock:hover{
-    transform:scale(1.03,1.03);
-    background-color: rgba(255, 255, 255, 0.5);
-    color: #777777;
-    box-shadow: 0 10px 10px -5px;
-}
-.proimage{
-    width: 100%;
-    overflow: hidden;
-}
-.proimage img{
-    width: 100%;
-    object-fit: cover;
-}
-.protitle{
-    font-size: 25px;
-    text-align: center;
-}
-.protag{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin: 2% 0;
-}
-.protag span{
-    font-size: 16px;
-    background-color: #46ada3;
-    border-radius: 5px;
-    padding: 2px 5px;
-    margin: 0 5px;
-    line-height: 1.5;
-    white-space: nowrap;
-}
-.probrief{
-    font-size: 20px;
 }
