--- a/styles/about.css
+++ b/styles/about.css
@@ -124,3 +124,59 @@ summary{
         font-size: 15px;
     }
 }
+
+/* popup */
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    z-index: 1000;
+    border-radius: 8px;
+    width: 80%;
+}
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+.popup-content {
+    max-height: 70vh;
+    overflow-y: auto;
+}
+.popup-content::-webkit-scrollbar {
+    width: 5px;
+}
+.popup-content::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.4);
+    border: 1px solid slategrey;
+}
+.popup-content h2{
+    margin: 1.5% 0;
+    font-size: 30px;
+}
+.popup-content h3{
+    margin: 1.5% 0;
+    font-size: 25px;
+}
+.popup-content p{
+    margin: 1% 0;
+    font-size: 20px;
+}
+.close-btn {
+    display: block;
+    margin-top: 20px;
+    text-align: center;
+    cursor: pointer;
+    color: #007BFF;
+}
