--- a/styles/projects.css
+++ b/styles/projects.css
@@ -91,3 +91,45 @@
 .probrief{
     font-size: 20px;
 }
+
+@media only screen and (max-width: 768px){
+    #projectc{
+        grid-template-columns: repeat(2,1fr);
+        gap: 15px;
+    }
+    .problock{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .proimage{
+        width: 100%;
+        overflow: hidden;
+    }
+    .prodetails{
+        width: 100%;
+    }
+    .protitle{
+        text-align: center;
+    }
+    .protime{
+        text-align: center;
+    }
+    .protag{
+        justify-content: center;
+    }
+    .probrief{
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 600px){
+    #projectc{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .proimage{
+        width: 60%;
+    }
+    .protag{
+        justify-content: center;
+    }
+}
