--- a/styles/about.css
+++ b/styles/about.css
@@ -28,14 +28,21 @@
     display: grid;
     gap: 7px;
     margin: 1%;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(4,1fr);
     grid-auto-rows: 1fr;
+}
+.scrollitems{
+    display: block;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+    margin: 1%;
 }
 .smallitems{
     display: grid;
     gap: 7px;
     margin: 1%;
-    grid-template-columns: repeat(8,1fr);
+    grid-template-columns: repeat(7,1fr);
     grid-auto-rows: 1fr;
 }
 @media only screen and (min-width: 768px) and (max-width: 1368px){
@@ -54,60 +61,76 @@
         grid-template-columns: repeat(2,1fr);
     }
 }
-.items .item{
+.items .item,
+.scrollitems .item{
     display: inline-flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 0.5em;
     word-spacing: normal;
-    border: 2px solid #2d726b;
     text-decoration: none;
     color: initial;
     transition: 0.5s;
+}
+.scrollitems .item{
+    width: 350px;
 }
 .smallitems .item{
     display: inline-flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 0.5em;
+    padding: 0.7em;
     word-spacing: normal;
     border: 2px solid #2d726b;
     text-decoration: none;
     color: initial;
     transition: 0.5s;
 }
-.item:hover{
+@media only screen and (max-width: 425px){
+    .smallitems .item{
+        flex-direction: column;
+    }
+}
+.smallitems .item:hover{
     background-color: #46ada3;
 }
-.items .item img{
-    width: 144px;
-    height: 144px;
+.items .item img,
+.scrollitems .item img{
+    width: 96px;
+    height: 96px;
     object-fit: cover;
+    padding: 0.5em;
+    border: 2px solid #2d726b;
+    border-radius: 100%;
 }
 .smallitems .item img{
-    height: 96px;
-    width: 96px;
-    margin-bottom: 3%;
+    height: 32px;
+    width: 32px;
+    margin-right: 3%;
     object-fit: cover;
 }
-.items .item .title{
-    font-size: 20px;
+.items .item .title,
+.scrollitems .item .title{
+    font-size: 18px;
     text-align: center;
     margin: 0%;
 }
 .items .item .description,
-.items .item .time{
+.scrollitems .item .description,
+.items .item .time
+.scrollitems .item .time{
     font-size: 16px;
     text-align: center;
     margin: 0%;
 }
-.items .item .time{
+.items .item .time,
+.scrollitems .item .time{
     color: #666666;
 }
 .smallitems .item .title{
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
 }
 details{
@@ -166,12 +189,13 @@ summary{
     font-size: 30px;
 }
 .popup-content h3{
-    margin: 1.5% 0;
-    font-size: 25px;
-}
-.popup-content p{
     margin: 1% 0;
-    font-size: 20px;
+    font-size: 24px;
+}
+.popup-content p,
+.popup-content li{
+    margin: 0.5% 0;
+    font-size: 18px;
 }
 .close-btn {
     display: block;
