--- a/styles/main.css
+++ b/styles/main.css
@@ -157,21 +157,13 @@ main{
     font-size: 75px;
     color: #ffffff
 }
-.pagesubtitle{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 30px;
-    overflow: hidden;
-    text-align: center;
-    margin-bottom: 20px;
-    margin-left: 5vw;
-    margin-right: 5vw;
-}
-.pagesubtitle p{
-    padding: 8px;
-    border: solid 5px #46ada3;
-    border-radius: 20px;
+@media only screen and (max-width: 425px){
+    .pagehead{
+        height: 30vh;
+    }
+    .pagetitle{
+        font-size: 50px;
+    }
 }
 .content{
     overflow: hidden;
@@ -188,12 +180,12 @@ main{
     font-size: 30px;
 }
 .content h3{
-    margin: 1.5% 0;
-    font-size: 25px;
+    margin: 1% 0;
+    font-size: 24px;
 }
 .content p{
-    margin: 1% 0;
-    font-size: 20px;
+    margin: 0.5% 0;
+    font-size: 18px;
 }
 @media only screen and (max-width: 600px){
     .content{
