--- a/styles/projects.css
+++ b/styles/projects.css
@@ -94,7 +94,7 @@
 
 @media only screen and (max-width: 768px){
     #projectc{
-        grid-template-columns: repeat(2,1fr);
+        grid-template-columns: repeat(1,1fr);
         gap: 15px;
     }
     .problock{
@@ -102,7 +102,7 @@
         justify-content: center;
     }
     .proimage{
-        width: 100%;
+        width: 60%;
         overflow: hidden;
     }
     .prodetails{
@@ -131,5 +131,9 @@
     }
     .protag{
         justify-content: center;
+
+        span{
+            font-size: 14px;
+        }
     }
 }
